<resources>
    <string name="app_name" translatable="false">CleaningService</string>
    <string name="התחברות">התחברות</string>
    <string name="הרשמה">הרשמה</string>
    <string name="MainLogo">MainLogo</string>
    <string name="FirstName">שם פרטי</string>
    <string name="LastName">שם משפחה</string>
    <string name="Email">דוא"ל</string>
    <string name="Phone">נייד</string>
    <string name="Username">שם משתמש</string>
    <string name="Password">סיסמה</string>
    <string name="RePassword">אימות סיסמה</string>
    <string name="City">ישוב</string>
    <string name="Address">כתובת</string>
    <string name="NextBtn">הבא</string>
    <string name="accountType">הגדר חשבון כעובד</string>
    <string name="Previous">קודם</string>
    <string name="End">יצירה</string>
    <string name="Login">התחבר</string>
    <string name="title_activity_homes">HomesActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_task">TaskActivity</string>
    <string name="member">"עדיין לא רשום? "</string>
    <string name="register">הרשמה</string>
    <string name="hello">ברוך הבא</string>
    <string name="but">back button</string>
    <string name="join">הצטרף אלינו עכשיו</string>
    <string name="done">כמעט סיימנו</string>
    <string name="logoword">Cleaning Services</string>
    <string name="logout">יציאה</string>

    <string name="Activation">הפעלת חשבון</string>
    <string name="ActivationCode">קוד אימות</string>
    <string name="Activation_detail">נא להזין את קוד האימות שקיבלת במייל</string>
    <string name="Activation_not_sent_details">שלח קוד אימות חדש</string>
    <string name="Activation_not_sent_title">\? לא קיבלת מייל</string>

    <string name="action_settings">Settings</string>
    <string name="profile_desc">Rowan Sebastian Atkinson CBE is an English actor,  comedian and screenwriter</string>
    <string name="profile_title">Mr Bean</string>
    <string name="posts">posts</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="msg_error_unable_select_profile_pic">Unable to set profile image. Please try again!</string>
    <string name="lbl_set_profile_photo">בחר תמונת פרופיל</string>
    <string name="lbl_take_camera_picture">צלם תמונה</string>
    <string name="lbl_choose_from_gallery">בחר מגלריה</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>

    <!-- font families -->
    <string name="font_family_light">sans-serif-light</string>
    <string name="font_family_medium">sans-serif-medium</string>
    <string name="font_family_regular">sans-serif</string>
    <string name="font_family_condensed">sans-serif-condensed</string>
    <string name="font_family_black">sans-serif-black</string>
    <string name="font_family_thin">sans-serif-thin</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="FindCleaner">מציאת מנקה</string>
    <string name="LogoTitle">Real World Cleaning Service</string>
    <string name="Budget">תקציב</string>
    <string name="Rooms">מספר חדרים</string>
    <string name="FormJobsList">טפסי עבודה זמינים</string>
    <string name="RoomsNumber">מס\' חדרים</string>
    <string name="Home">דף בית</string>
    <string name="StartDate">תאריך התחלה</string>
    <string name="EndDate">תאריך סיום</string>
    <string name="JobLocation">מקום העבודה</string>

    <string-array name="RoomsNumberOptions">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>
    <string name="Addphotos">הוספת תמונות</string>
    <string name="Tomorrow">מחר</string>
    <string name="TheDayAfterTomorrow">מחרתיים</string>
    <string name="ThisWeek">השבוע</string>
    <string name="All">הכל</string>
    <string name="ThisMonth">החודש</string>

    <string-array name="ratingOptions">
        <item>0 - 5 ★</item>
        <item>0 - 2 ★</item>
        <item>2 - 4 ★</item>
        <item>3 - 5 ★</item>
    </string-array>
    <string name="chooseRating">בחר דירוג</string>
    <string name="approve">אישור בקשה</string>
    <string name="dismiss">מחק בקשה</string>
    <string name="description">תיאור</string>
    <string name="sendJobRequest">שלח בקשת עבודה</string>
    <string name="backToList">חזרה לרשימה</string>
    <string name="RequestSent">בקשה נשלחה</string>
    <string name="newJobRequest">בקשת עבודה חדשה</string>
    <string name="myJobs">עבודות שלי</string>
    <string name="RequestAccepted">בקשתך התקבלה , הלקוח יצור איתך קשר בהקדם האפשרי</string>
    <string name="RequestRejected">בקשתך לעבודה זו נדחתה ע\"י הלקוח.</string>
    <string name="EndDateRemember">להזכירך, תאריך סיום עבודה הינו בתיאום מול המעסיק. אכן, תאריך אחרון זה עד</string>
    <string name="ContactCustomer">במידה ולא קיבלת משוב מלקוח, נא ליצור איתו קשר במספר :</string>
    <string name="Responsed">בקשות שנענו</string>
    <string name="WaitingForResponse">ממתינות למענה</string>
    <string name="MyRequests">הבקשות שלי</string>
    <string name="RequestDate">תאריך הבקשה</string>
    <string name="requestWatingForResponse">הבקשה ממתינה למענה.</string>
    <string name="WaitingCondition">במידה ולא התקבל מענה תוך 48 שעות, הבקשה תדחה!</string>
    <string name="FormStatus">סטטוס הטופס</string>
    <string name="Active">זמין</string>
    <string name="wait">בהמתנה</string>
    <string name="Assosiatedworker">עובד משויך</string>
    <string name="JobForm">טופס עבודה</string>
    <string name="RateEmployee">דירוג עובד</string>
    <string name="worksutisfication">כמה אתה מרוצה מהעבודה.</string>
    <string name="timeStisfication">כמה אתה מרוצה מהעמידה בזמן.</string>
    <string name="Deleteform">מחיקת בקשה</string>
    <string name="JobOfferLimit">עבודה זו תהייה זמינה עד לתאריך הסיום שרשום לעיל. במידה והחלטת לשלוח בקשת עבודה נא לקחת חשבון שהבקשה תדחה אוטומטית לאחר 48 שעות ללא מענה.</string>
    <string name="support">לשאלות נא לפנות אליינו במייל support@cleaningService.com</string>
    <string name="JobEnded">הסתיימו</string>
    <string name="jobEndedDescription">העבודה הסתיימה בהצלחה</string>
    <string name="RateUser">דירוג ★</string>
    <string name="addToFavorite">הוסף משתמש למועדפים ➕</string>
    <string name="addedToFavorite">משתמש התווסף למועדפים</string>
    <string name="ErrorHappend">תקלה התרחשה</string>
    <string name="Cancel">ביטול</string>
    <string name="Rate">דרג</string>
    <string name="AddEmpToFav">הוסף עובד למועדפים</string>
    <string name="publish">פרסם</string>
    <string name="FormId">מספר טופס</string>
    <string name="FavoriteList">רשימת המועדפים</string>
    <string name="removeFavorite">מחיקה מהמועדפים ❌</string>
    <string name="deletedFromFavorites">משתמש הוסר בהצלחה</string>
    <string name="ActivationFirstLine">לקוח יקר</string>
    <string name="ActivationSecondLine">תודה שבחרת בנו</string>
    <string name="ActivationThirdLine">להמשיך תהליך ההרשמה ולהפעיל את חשבונך נא להכניס את קוד האימות</string>
    <string name="Favorites">המועדפים</string>
    <string name="menu" translatable="false">רשימת</string>
    <string name="DeleteFavorite">מחק ממועדפים</string>
    <string name="send">שלח</string>
    <string name="FormIds">בחר מספרי הטפסים הרצויים</string>
    <string name="Public">ציבורי</string>
    <string name="DoneJob">עבודה הסתיימה</string>
    <string name="YouSure">\? בטוח רוצה לבציע פעולה זו</string>
    <string name="yes">כן</string>
    <string name="No">לא</string>
    <string name="Privat">פרטי</string>
    <string name="Pub">ציבורי</string>
    <string name="profile">פרופיל</string>
    <string name="MoreDetails">עוד פרטים</string>
    <string name="NotAvailable">לא זמין</string>
    <string name="RateCustomer">דירוג לקוח</string>
    <string name="JobProposalTitle">הצעות עבודה</string>
    <string name="ForgetMyPassword">שכחתי סיסמה !</string>
    <string name="ResetPassword">שחזור סיסמה</string>
    <string name="Change_Language">שנוי שפה</string>
    <string name="chooseLanguage">בחר שפה</string>
    <string name="passwordnotmatch">סיסמאות לא תואמות</string>
    <string name="passwordValidate">סיסמה חייבת להיות באוך 8 לפחות</string>
    <string name="usernameExists">שם המשתמש קיים במערכת</string>
    <string name="phoneNumberExists">מספר נייד קיים במערכת</string>
    <string name="EmailExists">דואר אלקטרוני נמצא במערכת</string>
    <string name="EmailNotValid">דואר אלקטרוני לא תקין</string>
    <string name="PhoneNumberNotValid">מספר נייד לא תקין</string>
    <string name="exception">אירעה שגיאה, נא לנסות מאוחר יותר</string>
    <string name="accountCreated">החשבון נוצר בהצלחה</string>
    <string name="accountBlocked">החשבון חסום</string>
    <string name="LoginFailed">אחד הנתונים שהזנת לא נכון</string>
    <string name="ActivationCodeNotValid">קוד אימות לא נכון</string>
    <string name="newCodeSent">קוד אימות חדש נשח אליך</string>
    <string name="passwordUpdated">הסיסמה עודכנה בהצלחה</string>
    <string name="phoneNumberNotExist">מספר נייד לא קיים במערכת</string>
    <string name="required">שדה חובה</string>
    <string name="noSymbols">אין להכיל סימנים</string>
    <string name="deletedSuccessfuly">מועדף נמחק בהצלחה</string>
    <string name="chooseAtLeastOne">נא לבחור לפחות טופס אחד</string>
    <string name="RequestsentSuccefully">הבקשה נשלחה בהצלחה</string>
    <string name="notValid">ערך לא חוקי</string>
    <string name="addressAndCity">כתובת ועיר הם שדות חובה</string>
    <string name="passedDate">תאריך כבר עבר או לא קיים</string>
    <string name="datesError">תאריך סיום לא יכול להיות לפני תאריך התחלה</string>
    <string name="addedToFavorites">נוסף למועדפים</string>
    <string name="noworkerexist">עדיין אין עובד משוייך</string>
    <string name="ratingDone">דירוג בוצע בהצלחה</string>
    <string name="deletedSuccefully">נמחק בהצלחה</string>
    <string name="requestAccepted">בקשה התקבלה</string>
    <string name="requestRejected">בקשה נדחתה</string>
    <string name="ratingSuccess">דירוג בוצע בהצלחה</string>

</resources>
