<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single" android:id="@+id/g1">
        <item
            android:id="@+id/navigation_findcleaner"
            android:icon="@drawable/ic_create_black_24dp"
            android:title="@string/FindCleaner" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/g2">
        <item
            android:id="@+id/navigation_myjobs"
            android:icon="@drawable/ic_work_black_24dp"
            android:title="@string/myJobs" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/g3">
        <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/MyRequests" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/g4">
        <item
            android:id="@+id/navigation_favlist"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/Favorites" />
    </group>
    <group android:checkableBehavior="single" android:id="@+id/g5">
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile" />

     </group>

    <group android:checkableBehavior="single" android:id="@+id/g6">
        <item
            android:id="@+id/navigation_signout"
            android:icon="@drawable/ic_sign_out_24dp"
            android:title="@string/logout" />

    </group>
</menu>
