<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".LoginActivity">


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/LoginUsername"
        android:layout_width="300sp"
        android:layout_height="43sp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/input_fealds"
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@+id/LoginPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/LoginPassword"
        android:layout_width="300sp"
        android:layout_height="43sp"
        android:layout_marginBottom="360dp"
        android:background="@drawable/input_fealds"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:padding="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="162sp"
        android:layout_height="53sp"
        android:layout_gravity="center"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/bold"
        android:onClick="Login"
        android:text="@string/Login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginPassword"
        app:layout_constraintVertical_bias="0.093"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="225dp"
        android:layout_height="51dp"
        android:fontFamily="@font/bold"
        android:text="@string/hello"
        android:textColor="@color/darkblue"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/LoginUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/light"
        android:text="@string/member"
        android:textColor="@color/gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.856" />

    <TextView
        android:id="@+id/SignUpBtn"
        android:layout_width="69dp"
        android:layout_height="26dp"
        android:fontFamily="@font/bold"
        android:onClick="OpenRegisterActivity"
        android:text="@string/register"
        android:textColor="@color/gradient1end"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.058"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.846" />

    <ImageView
        android:id="@+id/imageback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/but"
        android:onClick="OpenMainActivity"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.316"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="229dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/logoword"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />

</androidx.constraintlayout.widget.ConstraintLayout>