<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    android:layoutDirection="rtl"
    tools:context=".ResetPassword">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/Phone"
        android:layout_width="300sp"
        android:layout_height="43sp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="408dp"
        android:background="@drawable/input_fealds"
        android:drawableRight="@drawable/ic_local_phone_black_24dp"
        android:hint="@string/Phone"
        android:inputType="phone"
        android:padding="6dp"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/resetCode"
        android:layout_width="300sp"
        android:layout_height="43sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="350dp"
        android:background="@drawable/input_fealds"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/ActivationCode"
        android:inputType="text"
        android:padding="6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/newPassword"
        android:layout_width="300sp"
        android:layout_height="43sp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="408dp"
        android:background="@drawable/input_fealds"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/Password"
        android:inputType="text|textPassword"
        android:padding="6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/reNewPassword"
        android:layout_width="300sp"
        android:layout_height="43sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="350dp"
        android:background="@drawable/input_fealds"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/RePassword"
        android:inputType="text|textPassword"
        android:padding="6dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.423"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Phone" />

    <Button
        android:id="@+id/ResetLoginButton"
        android:layout_width="162sp"
        android:layout_height="53sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="272dp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/bold"
        android:onClick="ChangePassword"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reNewPassword"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/sendCodeBtn"
        android:layout_width="162sp"
        android:layout_height="53sp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="272dp"
        android:background="@drawable/login_btn"
        android:fontFamily="@font/bold"
        android:onClick="SendActivationCode"
        android:text="@string/send"
        android:textColor="@color/white"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.216"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reNewPassword"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="51dp"
        android:layout_marginTop="196dp"
        android:fontFamily="@font/bold"
        android:text="@string/ResetPassword"
        android:textColor="@color/darkblue"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.207"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/but"
        android:onClick="BackBtn"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.102"
        app:srcCompat="@drawable/back" />

    <TextView
        android:layout_width="229dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/bold"
        android:text="@string/logoword"
        android:textColor="@color/white"
        android:textSize="27sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.057" />
</androidx.constraintlayout.widget.ConstraintLayout>