<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    android:layout_gravity="center"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="150dp"
        app:cardCornerRadius="12dp">


    <LinearLayout
        android:background="@drawable/boardercard"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:orientation="vertical">

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layoutDirection="rtl"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/regular"
            android:text="@string/YouSure"

            />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/yes"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:fontFamily="@font/bold"
                android:background="@drawable/bg_ui"
                android:layout_marginEnd="30dp"
                android:text="@string/yes"/>

            <Button
                android:id="@+id/no"
                android:fontFamily="@font/bold"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:textColor="@color/white"
                android:background="@drawable/bg_ui"
                android:text="@string/No"/>

        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>